[package]
name = "elysium_descent_ignite"
version = "0.1.0"
edition = "2024"
authors = ["Okhai Omotuebe <okhaio@protonmail.com>"]
description = "Elysium Descent - Roguelike turn-based strategy game"
repository = "https://github.com/realm-of-ra/elysium-descent-ignite.git"
homepage = "https://okhaimie.com/"
categories = ["games", "game-development"]
keywords = ["bevy"]

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "hdr",
  "multi_threaded",
  "png",
  "jpeg",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  #"webgpu",
  "x11",
]}
bevy_enhanced_input = "0.11.0"
bevy_lunex = "0.4.1"
bevy_kira_audio = "0.23.0"
vleue_kinetoscope = "0.4"
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
starknet = "0.14.0"
tokio = { version = "1.44.2", features = ["full"] }
rand = "0.9.1"

[profile.dev]
opt-level = 1  # Basic optimizations

[profile.dev.package."*"]
opt-level = 3  # High optimization for dependencies

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
